--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/zoj
     username: root
-    password: 123456
+    password: zjf13760351788
   # Redis 配置
   # todo 需替换配置，然后取消注释
 #  redis:
@@ -88,3 +88,6 @@ cos:
     secretKey: xxx
     region: xxx
     bucket: xxx
+# 沙箱配置
+codesandbox:
+  type: example
